--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hello-pangea/dnd": "^18.0.1",
+    "firebase": "^12.0.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
